// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Tree checkGrammar=false 1`] = `
<tree-list
  checkGrammar={false}
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree checkGrammar=true 1`] = `
<tree-list
  checkGrammar={true}
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree checkHighlight=false 1`] = `
<tree-list
  checkHighlight={false}
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree checkHighlight=true 1`] = `
<tree-list
  checkHighlight={true}
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree checkSpaces=false 1`] = `
<tree-list
  checkSpaces={false}
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree checkSpaces=true 1`] = `
<tree-list
  checkSpaces={true}
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree className="my-classname" 1`] = `
<tree-list
  className="uu5-bricks-tree my-classname uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree content="This is Content from ContentMixin" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  content="This is Content from ContentMixin"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree content=12345 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  content={12345}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree controlled=false 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree controlled=true 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree default props 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree disabled=false 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree disabled=true 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree docKit examples UU5.Bricks.Tree should render without crash 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-xl"
  id="idROT-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="uuID01"
    key=".0"
    label="Movies"
  >
    <TreeItem
      id="uuID02"
      label="Comedies"
    >
      <TreeItem
        id="uuID03"
        label="Anchorman"
      />
      <TreeItem
        id="uuID04"
        label="Yesman"
      />
    </TreeItem>
  </TreeItem>
</tree-list>
`;

exports[`UU5.Bricks.Tree dynamic=false 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree dynamic=true 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  dynamic={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree hidden=false 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree hidden=true 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree iconCollapsed="uu5-plus" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  iconCollapsed="uu5-plus"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree iconExpanded="uu5-calendar" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  iconExpanded="uu5-calendar"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree id="myId" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="myId-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree ignoreHTML=false 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree ignoreHTML=true 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree items=[{"label":"Item 1","items":[{"label":"Item 1.1"}]},{"label":"Item 2","items":[{"label":"Item 2.1"}]}] 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  items={
    Array [
      Object {
        "items": Array [
          Object {
            "label": "Item 1.1",
          },
        ],
        "label": "Item 1",
      },
      Object {
        "items": Array [
          Object {
            "label": "Item 2.1",
          },
        ],
        "label": "Item 2",
      },
    ]
  }
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree mainAttrs=undefined 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree name="myName" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree nestingLevel="bigBox" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree nestingLevel="bigBoxCollection" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree nestingLevel="box" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree nestingLevel="boxCollection" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree nestingLevel="container" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="container"
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Tree nestingLevel="page" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="page"
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree nestingLevel="smallBox" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree nestingLevel="smallBoxCollection" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBoxCollection"
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree nestingLevel="spa" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="spa"
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree noIndex=false 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree noIndex=true 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-noindex uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree pureRender=false 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree pureRender=true 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  pureRender={true}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree selected=false 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree selected=true 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  selected={true}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree size="l" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-l"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree size="m" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree size="s" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-s"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree size="xl" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-xl"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree style="padding:8px; borderRadius: 2px" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree style={"backgroundColor":"red","color":"blue"} 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree textCorrector=false 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  textCorrector={false}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree textCorrector=true 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  textCorrector={true}
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;

exports[`UU5.Bricks.Tree tooltip="My Tooltip" 1`] = `
<tree-list
  className="uu5-bricks-tree uu5-bricks-tree-m"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  nestingLevel={null}
  tooltip="My Tooltip"
>
  <TreeItem
    expanded={true}
    id="idChild"
    key=".$0"
    label="Anchorman"
  />
</tree-list>
`;
